# mitch

./: .replit  MainPageEarthlost.py  README.md  bauauftrag.py  beautyfull.py  botschutz.py  findeKolonisierbarePlanetenMitPunkten.py  findeSpieler.py  headlessTest.py  helperEL.py  hrFlottenAnlegen.py  hrFlottenVerstärken.py  keep_alive.py  listeSpieler.py  login.py  loginLookup.py  multiThreading.py  nachrichtAnAlle.py  nachrichtenBombe.py  planetenListe.py  planetenRessourcenCheck.py  pyproject.toml  ressourcenCheck.py  schiffsProduktion.py  schiffsschleifeProzent.py  spielerBeobachtung.py  spioAuswerten.py  spionage.py  zeitungAuswertung.py
Util/: botschutz.py  findeKolonisierbarePlanetenMitPunkten.py  listeSpieler.py  login.py  planetenListe.py
flottenanlegen/: hrFlottenAnlegen.py  hrFlottenVerstärken.py
schiffe/: schiffsProduktion.py  schiffsschleifeProzent.py
sonstige/: beautyfull.py  headlessTest.py  helperEL.py
spieler/: findeSpieler.py  nachrichtAnAlle.py  nachrichtenBombe.py  spielerBeobachtung.py  zeitungAuswertung.py
spionage/: spioAuswerten.py  spionage.py
