[tool.poetry]
name = "repl_python3_mitch"
version = "0.1.0"
description = ""
authors = ["CaSp1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.3"
selenium = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
